--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
   <body>
       <script src="js/lightbox.js"></script>
       <header>
-        <h1><a style="color:yellow" href="https://taikisan21.github.io/PAMpal/">PAMpal</a></h1>
+        <h1><a style="color:#ffcc00" href="https://taikisan21.github.io/PAMpal/">PAMpal</a></h1>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
 
